new push w trip

--- a/journey_fixer.ipynb
+++ b/journey_fixer.ipynb
@@ -172,10 +172,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def journey_extraction_latest_arrival(S: dict, source_stop_id: str, destination_stop_id: str, arrival_time: str) -> list:\n",
+    "    \"\"\"Extract the journey from the source stop to the destination stop based on the latest possible arrival time.\n",
+    "\n",
+    "    Args:\n",
+    "        S (dict): It maintains the latest possible departure from depart station such that destination stop can eventually be reached on time.\n",
+    "        source_stop_id (str): The ID of the source stop.\n",
+    "        destination_stop_id (str): The ID of the destination stop.\n",
+    "        arrival_time (str): The desired arrival time at the destination stop. \n",
+    "\n",
+    "    Returns:\n",
+    "        ideal_journey (list): A list of connections representing the ideal journey from the source stop to the destination stop.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if source_stop_id == destination_stop_id:\n",
+    "        print('source is destination')\n",
+    "        return S[destination_stop_id]\n",
+    "    # if there is indeed a trip from source stop that starts a journey which eventually reaches the destination...\n",
+    "    if S[source_stop_id]['transport'] != None:\n",
+    "        # initialize the journey to empty, \n",
+    "        # the mode of transport to None, \n",
+    "        # the first connection to the source stop's latest-departure connection\n",
+    "        ideal_journey = []\n",
+    "        mode_of_transport = None\n",
+    "        ideal_connection = S[source_stop_id]\n",
+    "        # while mode of transport isn't None (which would indicate the end of the trip, based on how S[destination stop] was initialized)\n",
+    "        while ideal_connection['transport'] != None:\n",
+    "            # if mode of transport isn't previous mode of transport (meaning we have changed trip id or from trip->walk or vice-versa)...\n",
+    "            if ideal_connection['transport'] != mode_of_transport:\n",
+    "                # if connection isn't the first in the ideal journey...\n",
+    "                if ideal_connection['start_stop'] != source_stop_id:\n",
+    "                    # set latest trip in ideal journey to arrive where & when previous trip arrived \n",
+    "                    ideal_journey[-1]['arrival_time'] = previous_connection['arrival_time']\n",
+    "                    ideal_journey[-1]['arrival_stop'] = previous_connection['arrival_stop']\n",
+    "                # build out ideal journey, log as most recent step\n",
+    "                ideal_journey.append(ideal_connection)\n",
+    "                mode_of_transport = ideal_connection['transport']\n",
+    "                previous_connection = ideal_connection\n",
+    "                \n",
+    "            # if mode of transport IS previous mode of transport...\n",
+    "            # log as most recent step without adding it to ideal journey yet\n",
+    "            ## think of this like staying seated on the same train as it briefly stops at a platform;\n",
+    "            ## rather than log every intermediate stop where the user doesn't move, \n",
+    "            ## we just want to log the first and last stop on a given train ride, \n",
+    "            ## so we don't append any info to the journey yet. Once the user changes trains, we log\n",
+    "            ## that in the journey (this is what happens in the if statement above this else statement)\n",
+    "            previous_connection = ideal_connection\n",
+    "            # Prepare for next connection by finding latest feasible departure from current connection's arrival stop\n",
+    "            ideal_connection = S[ideal_connection['arrival_stop']]\n",
+    "        # leaving the loop means we've reached the final; we simply log the final stop of the final trip, and then end with the final destination.\n",
+    "        if ideal_connection['transport'] != mode_of_transport:\n",
+    "            ideal_journey[-1]['arrival_time'] = previous_connection['arrival_time']\n",
+    "            ideal_journey[-1]['arrival_stop'] = previous_connection['arrival_stop']\n",
+    "        ideal_journey.append(ideal_connection)\n",
+    "        return ideal_journey\n",
+    "    # if there is NOT a connection from source stop that starts a journey which eventually reaches the destination...\n",
+    "    else:\n",
+    "        print('No path exists starting from \"{}\" and arriving to \"{}\" by {}'.format(source_stop_id, destination_stop_id, arrival_time))\n",
+    "        return None\n",
+    "    \n",
+    "def print_journey_human_readable(journey):\n",
+    "    for leg in journey[0:-1]:\n",
+    "        start_name = stops_info[stops_info['stop_id'] == leg['start_stop']]['stop_name'].values[0]\n",
+    "        end_name = stops_info[stops_info['stop_id'] == leg['arrival_stop']]['stop_name'].values[0]\n",
+    "        start_time = pd.to_datetime(leg['start_time'], unit='s').strftime('%H:%M:%S')\n",
+    "        end_time = pd.to_datetime(leg['arrival_time'], unit='s').strftime('%H:%M:%S')\n",
+    "        if leg['transport'] == 'walking':\n",
+    "            type = 'walk'\n",
+    "        else:\n",
+    "            type = 'ride'\n",
+    "        print(type, start_name, '->', end_name, f'({start_time} to {end_time})')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ride Ecublens VD, Bassenges -> Ecublens VD, EPFL (19:22:00 to 19:24:00)\n",
+      "ride Ecublens VD, EPFL -> Ecublens VD, UNIL-Sorge (19:24:00 to 19:25:00)\n",
+      "ride Ecublens VD, UNIL-Sorge -> Chavannes-R., UNIL-Mouline (19:25:00 to 19:26:00)\n",
+      "walk Chavannes-R., UNIL-Mouline -> Chavannes-R., Dorigny (19:26:51 to 19:32:00)\n",
+      "ride Chavannes-R., Dorigny -> Chavannes-R., Talluchet (19:32:00 to 19:33:00)\n",
+      "ride Chavannes-R., Talluchet -> Lausanne, Maladière-Figuiers (19:33:00 to 19:41:00)\n",
+      "ride Lausanne, Maladière-Figuiers -> Pully, gare (19:41:00 to 19:58:00)\n",
+      "walk Pully, gare -> Pully (19:58:54 to 20:00:00)\n"
+     ]
+    }
+   ],
+   "source": [
+    "journey = journey_extraction_latest_arrival(S, '8501215', '8501121:0:2', '20:00:00')\n",
+    "print_journey_human_readable(journey)"
+   ]
   },
   {
    "cell_type": "code",
