add delay predictor

--- a/test.ipynb
+++ b/test.ipynb
@@ -16,7 +16,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.journey_finder import JourneyFinder"
+    "from src.journey_finder import JourneyFinder\n",
+    "from src.delay_prediction import DelayPredictor\n",
+    "\n",
+    "\n",
+    "from pyspark.ml import PipelineModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Start Spark name:{spark._sc.appName}, version:{spark.version}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loadedPipelineModel = PipelineModel.load(\"/user/kli/models\")\n",
+    "\n",
+    "hdfs_path = \"/user/kli/features_with_stats.parquet\"\n",
+    "features_with_stats = spark.read.parquet(hdfs_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delayPredictor = DelayPredictor(features_with_stats=features_with_stats, loadedPipelineModel=loadedPipelineModel)\n",
+    "delays = delayPredictor.predict(station_ids=station_ids, timestamps=timestamps)"
    ]
   },
   {
